# Typing-Game

./: .gitignore  README.md
src/: CMakeLists.txt
src/C-Launcher/: LauncherMain.c  LauncherTool-Common.c  LauncherTool-Linux.c  LauncherTool-Win.c  LauncherTool.h  Typing-Game-Launcher.rc  Win32Theme-amd64.manifest  Win32Theme-x86.manifest  Win32Theme.manifest
src/C-Runtime/: JNI_MainInterface.c  JNI_MainInterface.h
src/Java/: MANIFEST.MF
src/Java/buptsse/zero/: AutoCheckDocument.java  Chronometer.java  GameInterface.java  GlobalSettings.java  JNI_MainInterface.c  JNI_MainInterface.h  MainInterface.java  PlayerInfo.java  RankList.java  RankListInterface.java  ScrollView.java  TextFileParser.java
src/Java/buptsse/zero/res/string/: string_zh_CN.properties  string_zh_CN.utf8.properties
src/Java/buptsse/zero/res/text/: text1.xml
src/buptsse/zero/: AutoCheckDocument.java  Chronometer.java  GameInterface.java  MainInterface.java  ScrollView.java
src/buptsse/zero/res/text/: text1.xml
